<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/empty_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_view"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:layout_width="80dp"
            wheel:matProg_barColor="#5588FF"
            wheel:matProg_progressIndeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/error_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/loading_error_text"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/loading_error"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/try_again"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/try_again_button_text" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:id="@+id/content"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner"
                android:scrollbars="vertical" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/filter_text"
                android:layout_toRightOf="@+id/filter_text" />

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/filter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
